Publishers page: Layout issues

--- a/MailPusher/Content/Site.css
+++ b/MailPusher/Content/Site.css
@@ -1,5 +1,4 @@
-﻿
-#rememberMe input[type=checkbox] {
+﻿#rememberMe input[type=checkbox] {
     margin-left:0px;
 }
 #menuProjectName i {
